fix: wrap long descriptions

--- a/components/single-post/index.module.css
+++ b/components/single-post/index.module.css
@@ -1,5 +1,6 @@
 .container {
     --separator-height: 5rem;
+    max-width: 100%;
 }
 
 .meta {
@@ -8,6 +9,8 @@
 
 .description {
     white-space: pre-wrap;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
 }
 
 .title {
